# FastAPI-Project_1

./: .env  alembic.ini  database.py  emailConfig.py  email_service.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: ddd2e249bad0_update_user_and_todo_table.py
app/core/: celery_app.py
app/models/: todo.py  user.py
app/routes/: todo.py  user.py
app/schemas/: response.py  todo.py  user.py
app/tasks/: email_task.py
app/utils/: auth.py  dependencies.py  error_decorator.py  redis_client.py  response.py  settings.py
